--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,5 +11,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="DisplayGraphActivity"
+            android:label="@string/title_activity_display_graph"
+            android:parentActivityName="MainActivity" >
+          <meta-data
+              android:name="android.support.PARENT_ACTIVITY"
+              android:value="MainActivity" />
+        </activity>
     </application>
 </manifest>
