--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.example.speedguntool"
       android:versionCode="1"
       android:versionName="1.0">
+       <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
@@ -14,6 +15,14 @@
         <activity
             android:name="DisplayGraphActivity"
             android:label="@string/title_activity_display_graph"
+            android:parentActivityName="MainActivity" >
+          <meta-data
+              android:name="android.support.PARENT_ACTIVITY"
+              android:value="MainActivity" />
+        </activity>
+        <activity
+            android:name="XYChartBuilder"
+ 
             android:parentActivityName="MainActivity" >
           <meta-data
               android:name="android.support.PARENT_ACTIVITY"
